deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: default
  labels:
    run: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/terraform-310215/fe-tier1:latest
          ports:
            - containerPort: 3000
              protocol: TCP

kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: default
  labels:
    run: api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: api
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
        - name: api
          image: gcr.io/terraform-310215/be-api-tier2:latest
          ports:
            - containerPort: 5000
              protocol: TCP


---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: database
  namespace: default
  labels:
    run: database
spec:
  replicas: 1
  selector:
    matchLabels:
      run: database
  template:
    metadata:
      labels:
        run: database
    spec:
      containers:
        - name: database
          image: gcr.io/terraform-310215/db-tier3:latest
          ports:
            - containerPort: 5432
              protocol: TCP
